--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <h1>Hola</h1>
+    <form id="saludar-form">
+      <label for="nombre">Cual es tu Nombre:</label>
+    </form>
 </body>  
 </html>
