--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <h1>Hola</h1>
     <form id="saludar-form">
       <label for="nombre">Cual es tu Nombre:</label>
+        <input type="text" id="nombre" required/> 
+        <label for="edad">Edad :</label>
+        <input type="number" id="edad" required/>
     </form>
 </body>  
 </html>
