Agregar las variables y datos del genero y el idioma

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         <input type="text" id="nombre" required/> 
         <label for="edad">Edad :</label>
         <input type="number" id="edad" required/>
+        <input type="radio" id="genero-f" name="genero" value="F" required/>
+        <label for="genero-f">Femenino</label>
+        <input type="radio" id="genero-m" name="genero" value="M" required/>
+        <label for="genero-m">Masculino</label>
+        <label for="idioma">Idioma:</label>
+        <select id="idioma" required>
+            <option value="ES">Español</option> 
+            <option value="EN">Inglés</option>
+        </select>
     </form>
 </body>  
 </html>
