--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <option value="ES">Español</option> 
             <option value="EN">Inglés</option>
         </select>
+        <input type="submit" value="Saludar" id="saludar-button" />
     </form>
+     <div id="resultado-div"></div>
+    <script type="module" src="./src/presenter.js"></script>
 </body>  
 </html>
