Inclusión de nuevos idiomas

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <select id="idioma" required>
             <option value="ES">Español</option> 
             <option value="EN">Inglés</option>
+            <option value="FR">Francés</option>
+            <option value="EN">Portugues</option>
         </select>
         <input type="submit" value="Saludar" id="saludar-button" />
     </form>
