Detalles para la vista del formulario de saludo

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         <label for="genero-f">Femenino</label>
         <input type="radio" id="genero-m" name="genero" value="M" required/>
         <label for="genero-m">Masculino</label>
-        <label for="idioma">Idioma:</label>
-        <select id="idioma" required>
-            <option value="ES">Español</option> 
-            <option value="EN">Inglés</option>
-            <option value="FR">Francés</option>
-            <option value="EN">Portugues</option>
-        </select>
+        <div>
+            <label for="idioma">Idioma:</label>
+            <select id="idioma" required>
+                <option value="ES">Español</option> 
+                <option value="EN">Inglés</option>
+                <option value="FR">Francés</option>
+                <option value="PT">Portugues</option>
+            </select>
+        </div>
         <input type="submit" value="Saludar" id="saludar-button" />
     </form>
      <div id="resultado-div"></div>
